  Entity.remove(propertyId) now returns the value being removed
  SwingEntityTableModel.setForeignKeyConditionValues() no longer final
  DefaultColumnConditionModel.AUTOMATIC_WILDCARD and CASE_SENSITIVE configuration values moved to ColumnConditionModel
  NavigableImagePanel, some minor refactoring/renaming
  EntityTablePanel.createEntityTablePanel(), resulting panel popup menu now includes a delete action and a view dependencies action
  SwingEntityTableModel.selectDependentEntities() added
  ReferentialIntegrityException added
  Database.isReferentialIntegrityException() added
  DefaultLocalEntityConnection.delete() now throws ReferentialIntegrityException if applicable
  DialogExceptionHandler.handleException() renamed to displayException
  EntityEditPanel, EntityTablePanel, exception handling refactored
  EntityEditPanel, EntityTablePanel now handle ReferentialIntegrityException by displaying the dependent records (if configured to do so), allowing the user to delete them
  Property.ForeignKeyProperty.softReference attribute added
  DefaultLocalEntityConnection.selectDependentEntities() excludes soft foreign key references
  NavigableImagePanel.isInImage() renamed to isWithinImage() and made final, minor literal edge case bug fixes
  EntityTablePanel.ReferentialIntegrityErrorHandling enum added, some relevant refactoring
  EntityPanel.displayException() convenience method added
0.12.1
  org.jminor.common.db.dbms package broken up into seperate dbms modules, projects must now include dbms module dependency
  dbms modules no longer include jdbc dependencies
  jminor-dbms-h2 module renamed to jminor-dbms-h2database
  jminor-framework-domain module split from jminor-framework-db-core
  DatabasesTest coverage improved a bit
  ValueMapEditModel, EntityEditModel, setValue(), removeValue(), getValue() and getForeignKeyValue() renamed to put(), remove(), get() and getForeignKey() respectively, now consistent with ValueMap and Entity method names